--- a/webdeveloper-portfolio/styles/portfolio.css
+++ b/webdeveloper-portfolio/styles/portfolio.css
@@ -5,6 +5,9 @@ body {
 
 .header {
   background-color: #fff8f3;
+  background-image: url('../images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 .text-orange-color {
   color: #fd6e0a;
@@ -53,8 +56,15 @@ nav a {
 /* Banner starts */
 
 .banner {
-  padding: 30px 30px 30px 200px;
+  padding: 30px 30px 0px 200px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.banner-content{
+    max-width: 500px;
+
 }
 
 .banner-greeting {
@@ -62,14 +72,61 @@ nav a {
   font-size: 45px;
   font-style: normal;
   font-weight: 600;
+  margin-bottom: 5px ;
 }
 .banner-tittle {
   color: var(--Dark-01, #181818);
   font-size: 70px;
   font-style: normal;
   font-weight: 700;
+  margin-bottom: 20px;
 }
 
+.banner-decription{
+    margin-bottom: 30px;
+    color: var(--Dark-03, #757575);
+
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+
+}
 .profile-pic{
-    width: 500px;
+    width: 550px;
+}
+
+/* header ends */
+
+
+/* main starts */
+
+/* about starts */
+.primary-pink-color{
+    background-color: #FFF8F3;
+}
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    margin: 130px;
+}
+
+.section-tittle{
+    color: var(--Dark-01, #181818);
+    text-align: center;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    
+}
+
+.section-description{
+    color: var(--Dark-03, #757575);
+text-align: center;
+
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+
+
 }
